paid/force-app/main/default/objects/OrderItem/fields/Hardware_Color__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Color__c</fullName>
    <label>Hardware Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>