paid/force-app/main/default/objects/OrderItem/fields/PAID_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>PAID_Order_Id__c</fullName>
    <formula>Order.PAID_Order_ID__c</formula>
    <label>PAID Order Id</label>
    <type>Text</type>
</CustomField>