paid/force-app/main/default/objects/OrderItem/fields/PAID_Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>PAID_Order_Line_ID__c</fullName>
    <externalId>true</externalId>
    <label>PAID Order Line ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>