paid/force-app/main/default/objects/OrderItem/fields/PAID_ProductExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_ProductExternalID__c</fullName>
    <formula>Product2.PAID_ProductExternalID__c</formula>
    <label>PAID ProductExternalID</label>
    <type>Text</type>
</CustomField>