paid/force-app/main/default/objects/OrderItem/fields/Sent_To_Paid__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To Paid</label>
    <type>Checkbox</type>
</CustomField>